welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:3: error: illegal start of statement
		else if(day == 1 ||day == 2 ||day == 3 || day == 4 ||day == 5) {
                ^alarmClock:11: error: illegal start of statement
		else if (day == 1 ||day == 2 ||day == 3 || day == 4 ||day == 5){
                ^